--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contato">Contato</a></li>
-            </ul>          
+            </ul>
+            <div id="acessibilidade" class="menu-acessibilidade">
+                <button id="botao-acessibilidades" class="btn btn-primary fw-bold rotacao-botao">A+ </button>
+                <button id="botao-acessibilidades" class="btn btn-primary fw-bold rotacao-botao">A- </button>
+            </div>          
         </nav>
        
     </header>
